tests/neg/t3275.scala
object Test {
  @annotation.tailrec def foo() = 5 // error: not recursive
}
